--- a/frontend/index-reg.html
+++ b/frontend/index-reg.html
@@ -89,11 +89,17 @@
     <div class="row" id="row-main">
         <div class="col-sm-12">
             <h1 class="text-center">
-                Please login
+                Please register
             </h1>
             <div class="row">
                 <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
                     <form class="form-horizontal">
+                        <div class="form-group">
+                            <label for="inputEmail3" class="col-sm-2 control-label">Name</label>
+                            <div class="col-sm-10">
+                                <input type="email" class="form-control" id="inputName3" placeholder="Name">
+                            </div>
+                        </div>
                         <div class="form-group">
                             <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
                             <div class="col-sm-10">
@@ -108,7 +114,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-sm-offset-2 col-sm-10">
-                                <button type="submit" class="btn btn-primary">Sign in</button>
+                                <button type="submit" class="btn btn-primary">Register</button>
                             </div>
                         </div>
                     </form>
