Top menu changed

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -60,40 +60,18 @@
 
             <nav class="menu_container">
                 <ul class="menu">
-                    <li class="drop-normal"><a href="#" class="drop-down">Calculators</a>
+                    <li class="drop-normal"><a href="#" class="drop-down">Sport</a></li>
+                    <li class="drop-normal"><a href="#" class="drop-down">Food</a>
                         <div class="drop-down-container normal">
                             <ul>
-                                <li><a href="daily-calorie-calculator.html">Daily calories calculator</a></li>
-                                <li><a href="calories-burned-by-heart-rate.html">Calories Burned by Heart rate</a></li>
-                                <li><a href="calories-burned-by-activities.html">Calories Burned by Activities</a></li>
-                                <li><a href="BMI-body-mass-calculator.html">BMI Body Mass Calculator</a></li>
+                                <li><a>List</a></li>
+                                <li><a>Add</a></li>
                             </ul>
                         </div><!-- End dropdown normal -->
                     </li>
-                    <li class="drop-normal"><a href="#" class="drop-down">Programs</a>
-                        <div class="drop-down-container normal">
-                            <ul>
-                                <li><a href="cardio_program.html">Cardio Program</a></li>
-                                <li><a href="toning_program.html">Toning Program</a></li>
-                                <li><a href="functionality_program.html">Functionaly Program</a></li>
-                                <li><a href="body_and_mind_program.html">Body and Mind Program</a></li>
-                            </ul>
-                        </div><!-- End dropdown normal -->
-                    </li>
-                    <li class="drop-normal"><a href="#" class="drop-down">Pages</a>
-                        <div class="drop-down-container normal">
-                            <ul>
-                                <li><a href="about.html">About</a></li>
-                                <li><a href="programs.html">Programs</a></li>
-                                <li><a href="pricing.html">Pricing</a></li>
-                                <li><a href="blog.html">Blog</a></li>
-                                <li><a href="widget/index.html">Widget version</a></li>
-                                <li><a href="shortcodes.html">Shortcodes</a></li>
-                                <li><a href="contacts.html">Contacts</a></li>
-                            </ul>
-                        </div><!-- End dropdown normal -->
-                    </li>
-                    <li><a href="http://themeforest.net/item/activity-calories-calculators-and-sport-activity/8792981?ref=ansonika">Purchase this template</a></li>
+                    <li class="drop-normal"><a href="#" class="drop-down">Excersices</a></li>
+                    <li class="drop-normal"><a href="#" class="drop-down">Profile</a></li>
+                    <li class="drop-normal"><a href="#" class="drop-down">Help</a></li>
                 </ul>
             </nav>
         </div> <!-- End col lg 12 -->
