--- a/frontend/index-reg.html
+++ b/frontend/index-reg.html
@@ -9,22 +9,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Favicons-->
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="img/favicon.ico" type="/static/image/x-icon"/>
     <link rel="apple-touch-icon" type="image/x-icon" href="img/apple-touch-icon-57x57-precomposed.png">
     <link rel="apple-touch-icon" type="image/x-icon" sizes="72x72" href="img/apple-touch-icon-72x72-precomposed.png">
     <link rel="apple-touch-icon" type="image/x-icon" sizes="114x114" href="img/apple-touch-icon-114x114-precomposed.png">
     <link rel="apple-touch-icon" type="image/x-icon" sizes="144x144" href="img/apple-touch-icon-144x144-precomposed.png">
 
     <!-- CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/menu.css" rel="stylesheet">
-    <link href="fontello/css/fontello.css" rel="stylesheet">
-    <link rel="stylesheet" href="js/fancybox/source/jquery.fancybox.css?v=2.1.4">
+    <link href="/static/css/bootstrap.css" rel="stylesheet">
+    <link href="/static/css/style.css" rel="stylesheet">
+    <link href="/static/css/menu.css" rel="stylesheet">
+    <link href="/static/css/fontello.css" rel="stylesheet">
+    <link rel="stylesheet" href="/static/js/fancybox/source/jquery.fancybox.css?v=2.1.4">
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond./static/js/1.3.0/respond.min.js"></script>
     <![endif]-->
 
 </head>
@@ -39,7 +39,7 @@
 
     <header>
         <div id="logo" data-retina="true">
-            <a href="index.html"><img src="img/logo.png" alt="" data-retina="true" width="160" height="40"></a>
+            <a href="index.html"><img src="/static/img/logo.png" alt="" data-retina="true" width="160" height="40"></a>
         </div>
         <div class="col-md-12 col-sm-12">
             <a id="menu-button-mobile" href="#"><i class=" icon-menu"></i></a><!-- Menu button responsive-->
@@ -93,23 +93,23 @@
             </h1>
             <div class="row">
                 <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
-                    <form class="form-horizontal">
+                    <form action="/signup/" method="POST" class="form-horizontal"> {% csrf_token %}
                         <div class="form-group">
                             <label for="inputEmail3" class="col-sm-2 control-label">Name</label>
                             <div class="col-sm-10">
-                                <input type="email" class="form-control" id="inputName3" placeholder="Name">
+                                <input type="text" class="form-control" id="inputName3" name="first_name" placeholder="Name">
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
                             <div class="col-sm-10">
-                                <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                                <input type="email" class="form-control" id="inputEmail3" name="email" placeholder="Email">
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
                             <div class="col-sm-10">
-                                <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                                <input type="password" class="form-control" id="inputPassword3" name="password" placeholder="Password">
                             </div>
                         </div>
                         <div class="form-group">
@@ -125,12 +125,12 @@
 </div><!-- End main-wrapper  -->
 
 <!-- JQUERY -->
-<script src="js/jquery-1.10.min.js"></script>
+<script src="/static/js/jquery-1.10.min.js"></script>
 
 <!-- OTHER JS -->
-<script src="js/bootstrap.min.js"></script>
-<script src="js/retina-replace.min.js"></script>
-<script src="js/jquery.placeholder.js"></script>
-<script src="js/functions.js"></script>
+<script src="/static/js/bootstrap.min.js"></script>
+<script src="/static/js/retina-replace.min.js"></script>
+<script src="/static/js/jquery.placeholder.js"></script>
+<script src="/static/js/functions.js"></script>
 </body>
 </html>
