--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,19 +10,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Favicons-->
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
-    <link rel="apple-touch-icon" type="image/x-icon" href="img/apple-touch-icon-57x57-precomposed.png">
-    <link rel="apple-touch-icon" type="image/x-icon" sizes="72x72" href="img/apple-touch-icon-72x72-precomposed.png">
-    <link rel="apple-touch-icon" type="image/x-icon" sizes="114x114" href="img/apple-touch-icon-114x114-precomposed.png">
-    <link rel="apple-touch-icon" type="image/x-icon" sizes="144x144" href="img/apple-touch-icon-144x144-precomposed.png">
+    <link rel="shortcut icon" href="/static/img/favicon.ico" type="/static/image/x-icon"/>
+    <link rel="apple-touch-icon" type="image/x-icon" href="/static/img/apple-touch-icon-57x57-precomposed.png">
+    <link rel="apple-touch-icon" type="image/x-icon" sizes="72x72" href="/static/img/apple-touch-icon-72x72-precomposed.png">
+    <link rel="apple-touch-icon" type="image/x-icon" sizes="114x114" href="/static/img/apple-touch-icon-114x114-precomposed.png">
+    <link rel="apple-touch-icon" type="image/x-icon" sizes="144x144" href="/static/img/apple-touch-icon-144x144-precomposed.png">
 
     <!-- CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/menu.css" rel="stylesheet">
-    <link href="css/fontello.css" rel="stylesheet" >
-    <link href="css/flexslider.css" rel="stylesheet">
-    <link href="css/slider.css" rel="stylesheet">
+    <link href="/static/css/bootstrap.css" rel="stylesheet">
+    <link href="/static/css/style.css" rel="stylesheet">
+    <link href="/static/css/menu.css" rel="stylesheet">
+    <link href="/static/css/fontello.css" rel="stylesheet" >
+    <link href="/static/css/flexslider.css" rel="stylesheet">
+    <link href="/static/css/slider.css" rel="stylesheet">
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -45,7 +45,7 @@
 <body>
 <!-- Preloader -->
 <div id="preloader">
-    <div id="status"><img src="img/logo.png" alt="" data-retina="true" width="160" height="40"></div>
+    <div id="status"><img src="/static/img/logo.png" alt="" data-retina="true" width="160" height="40"></div>
 </div>
 <!--  end Preloader -->
 
@@ -53,7 +53,7 @@
 
     <header>
         <div id="logo" data-retina="true">
-            <a href="index.html"><img src="img/logo.png" alt="" data-retina="true" width="160" height="40"></a>
+            <a href="index.html"><img src="/static/img/logo.png" alt="" data-retina="true" width="160" height="40"></a>
         </div>
         <div class="col-md-12 col-sm-12">
             <a id="menu-button-mobile" href="#"><i class=" icon-menu"></i></a><!-- Menu button responsive-->
@@ -80,10 +80,10 @@
 
     <div class="flexslider">
         <ul class="slides">
-            <li style="background: url(img/03.jpg) center"></li>
-            <li style="background: url(img/04.jpg) center"></li>
-            <li style="background: url(img/01.jpg) center"></li>
-            <li style="background: url(img/02.jpg) center"></li>
+            <li style="background: url(/static/img/03.jpg) center"></li>
+            <li style="background: url(/static/img/04.jpg) center"></li>
+            <li style="background: url(/static/img/01.jpg) center"></li>
+            <li style="background: url(/static/img/02.jpg) center"></li>
         </ul>
     </div><!-- End slider -->
 
@@ -93,7 +93,7 @@
                 <div class="col-md-3 col-sm-6 col-xs-6">
                     <div class="box_calculator">
                         <a href="daily-calorie-calculator.html">
-                            <img src="img/icon-1.png" alt="" data-retina="true">
+                            <img src="/static/img/icon-1.png" alt="" data-retina="true">
                             <h3>Daily Calorie<br>Calculator</h3>
                         </a>
                     </div><!-- End box-calculator -->
@@ -102,7 +102,7 @@
                 <div class="col-md-3 col-sm-6 col-xs-6">
                     <div class="box_calculator">
                         <a href="calories-burned-by-heart-rate.html">
-                            <img src="img/icon-2.png" alt="" data-retina="true">
+                            <img src="/static/img/icon-2.png" alt="" data-retina="true">
                             <h3>Calorie Burned<br>by heart/rate</h3>
                         </a>
                     </div><!-- End box-calculator -->
@@ -111,7 +111,7 @@
                 <div class="col-md-3 col-sm-6 col-xs-6">
                     <div class="box_calculator">
                         <a href="calories-burned-by-activities.html">
-                            <img src="img/icon-3.png" alt="" data-retina="true">
+                            <img src="/static/img/icon-3.png" alt="" data-retina="true">
                             <h3>Calorie Burned<br>by activities</h3>
                         </a>
                     </div><!-- End box-calculator -->
@@ -120,7 +120,7 @@
                 <div class="col-md-3 col-sm-6 col-xs-6">
                     <div class="box_calculator">
                         <a href="BMI-body-mass-calculator.html">
-                            <img src="img/icon-4.png" alt="" data-retina="true">
+                            <img src="/static/img/icon-4.png" alt="" data-retina="true">
                             <h3>Bmi Body mass<br>Calculator</h3>
                         </a>
                     </div><!-- End box-calculator -->
@@ -134,17 +134,17 @@
 </div><!-- End main-wrapper  -->
 
 <!-- JQUERY -->
-<script src="js/jquery-1.10.min.js"></script>
+<script src="/static/js/jquery-1.10.min.js"></script>
 
 <!-- FlexSlider -->
-<script src="js/jquery.flexslider.js"></script>
-<script src="js/slider_func.js"></script>
+<script src="/static/js/jquery.flexslider.js"></script>
+<script src="/static/js/slider_func.js"></script>
 
 <!-- OTHER JS -->
-<script src="js/bootstrap.min.js"></script>
-<script src="js/retina-replace.min.js"></script>
-<script src="js/jquery.placeholder.js"></script>
-<script src="js/functions.js"></script>
+<script src="/static/js/bootstrap.min.js"></script>
+<script src="/static/js/retina-replace.min.js"></script>
+<script src="/static/js/jquery.placeholder.js"></script>
+<script src="/static/js/functions.js"></script>
 
 </body>
 </html>
