Updated table's items according to DB items

--- a/frontend/tables/tables.html
+++ b/frontend/tables/tables.html
@@ -70,7 +70,7 @@
         <th>#</th>
         <th> Exercise</th>
         <th>Type </th>
-        <th>Burned Cal</th>
+        <th>Effort</th>
     </tr>
     </thead>
     <tbody>
@@ -78,20 +78,20 @@
         <th scope="row">1</th>
         <td>Running</td>
         <td>Cardio</td>
-        <td>100</td>
+        <td>40</td>
     </tr>
     <tr>
         <th scope="row">2</th>
         <td>Swimming</td>
         <td>Cardio</td>
-        <td>200</td>
+        <td>50</td>
 
     </tr>
     <tr>
         <th scope="row">3</th>
         <td>Gym</td>
-        <td>BodyBuilder</td>
-        <td>300</td>
+        <td>Strength</td>
+        <td>45</td>
     </tr>
     </tbody>
 </table>
@@ -101,7 +101,8 @@
     <caption> <h2 align="center">My Weight </h2> </caption>
     <thead>
     <tr>
-        <th>Week</th>
+        <th>#</th>
+        <th>Data</th>
         <th>Current weight</th>
         <th>Loss/Gain weight</th>
     </tr>
@@ -109,23 +110,27 @@
     <tbody>
     <tr>
         <th scope="row">1</th>
+        <td>01.11.2016 </td>
         <td>53.7</td>
         <td>2.1</td>
     </tr>
     <tr>
         <th scope="row">2</th>
+        <td>03.11.2016</td>
         <td>51.5</td>
         <td>0.7</td>
 
     </tr>
     <tr>
         <th scope="row">3</th>
+        <td>05.11.2016</td>
         <td>49.9</td>
         <td>0.5</td>
     </tr>
 
     <tr>
         <th scope="row">TOTAL:</th>
+        <td></td>
         <td></td>
         <td></td>
     </tr>
