Added a new form for photos attachments

--- a/frontend/forms/forms.html
+++ b/frontend/forms/forms.html
@@ -90,36 +90,49 @@
                                 <option>Strength</option>
                             </select>
                         </div>
-                        <button type="ok" class="btn btn-default">Ok</button>
-
-
-                        <caption><h2 align="center">My Cardio </h2></caption>
-
-                        <div class="form-group">
-                            <form class="form-inline">
-                                <label for="inputTime">Time</label>
-                                <input type="number" class="form-control" id="inputTime" placeholder="25 kg">
-                                <button type="add" class="btn btn-default">Add</button>
-                            </form>
-                        </div>
-
-                        <caption><h2 align="center">My Strength </h2></caption>
-
-                        <div class="form-group">
-                            <form class="form-inline">
-                                <label for="inputExerWeight">Weight</label>
-                                <input type="number" class="form-control" id="inputExerWeight" placeholder="25 kg">
-                                <button type="add" class="btn btn-default">Add</button>
-                            </form>
-                        </div>
-
                     </form>
+                    <button type="ok" class="btn btn-default">Ok</button>
+
+
+                    <caption><h2 align="center">Cardio </h2></caption>
+
+                    <div class="form-group">
+                        <form class="form-inline">
+                            <label for="inputTime">Time</label>
+                            <input type="number" class="form-control" id="inputTime" placeholder="25 kg">
+                            <button type="add" class="btn btn-default">Add</button>
+                        </form>
+                    </div>
+
+                    <caption><h2 align="center">Strength </h2></caption>
+
+                    <div class="form-group">
+                        <form class="form-inline">
+                            <label for="inputExerWeight">Weight</label>
+                            <input type="number" class="form-control" id="inputExerWeight" placeholder="25 kg">
+                            <button type="add" class="btn btn-default">Add</button>
+                        </form>
+                    </div>
+
                 </div>
             </form>
+            <caption><h2 align="center">My Gallery </h2></caption>
+
+
+            <div class="form-group">
+                <form class="form-inline">
+                    <label for="inputPhoto">Photo input</label>
+                    <input type="file" id="inputPhoto">
+                    <p class="help-block">To control the progress add your photos here.</p>
+                    <button type="add" class="btn btn-default">Add</button>
+                </form>
+            </div>
+
+
+            </form>
+
         </div>
     </div>
-</div>
-</div>
 </div>
 </div>
 </body>
