--- a/frontend/index.html
+++ b/frontend/index.html
@@ -53,7 +53,7 @@
 
     <header>
         <div id="logo" data-retina="true">
-            <a href="index.html"><img src="/static/img/logo.png" alt="" data-retina="true" width="160" height="40"></a>
+            <a href=".."><img src="/static/img/logo.png" alt="" data-retina="true" width="160" height="40"></a>
         </div>
         <div class="col-md-12 col-sm-12">
             <a id="menu-button-mobile" href="#"><i class=" icon-menu"></i></a><!-- Menu button responsive-->
@@ -64,7 +64,7 @@
                     <li class="drop-normal"><a href="#" class="drop-down">Food</a>
                         <div class="drop-down-container normal">
                             <ul>
-                                <li><a>List</a></li>
+                                <li><a href="./nutrition/">List</a></li>
                                 <li><a>Add</a></li>
                             </ul>
                         </div><!-- End dropdown normal -->
