--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -12,8 +12,10 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
     <link rel="apple-touch-icon" type="image/x-icon" href="img/apple-touch-icon-57x57-precomposed.png">
     <link rel="apple-touch-icon" type="image/x-icon" sizes="72x72" href="img/apple-touch-icon-72x72-precomposed.png">
-    <link rel="apple-touch-icon" type="image/x-icon" sizes="114x114" href="img/apple-touch-icon-114x114-precomposed.png">
-    <link rel="apple-touch-icon" type="image/x-icon" sizes="144x144" href="img/apple-touch-icon-144x144-precomposed.png">
+    <link rel="apple-touch-icon" type="image/x-icon" sizes="114x114"
+          href="img/apple-touch-icon-114x114-precomposed.png">
+    <link rel="apple-touch-icon" type="image/x-icon" sizes="144x144"
+          href="img/apple-touch-icon-144x144-precomposed.png">
 
     <!-- CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -79,7 +81,6 @@
                             </ul>
                         </div><!-- End dropdown normal -->
                     </li>
-                    <li><a href="http://themeforest.net/item/activity-calories-calculators-and-sport-activity/8792981?ref=ansonika">Purchase this template</a></li>
                 </ul>
             </nav>
         </div> <!-- End col lg 12 -->
@@ -96,30 +97,33 @@
                 <div class="col-md-3 col-sm-1 col-xs-1">
                     <img src="img/icon-4.png" alt="" data-retina="true">
 
-                        <div class="form-group">
-                            <div class="col-sm-offset-2 col-sm-10 text-center">
-                                <button type="submit" class="btn btn-primary">Upload</button>
-                            </div>
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10 text-center">
+                            <button type="submit" class="btn btn-primary">Upload</button>
                         </div>
-                 </div>
+                    </div>
+                </div>
                 <div class="col-md-3 col-sm-1 col-xs-1">
                     <form action="/login/" method="POST" class="form-horizontal">
                         <div class="form-group">
                             <label for="inputName" class="col-sm-2 control-label">Name</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" id="inputName" name="first_name" placeholder="Name">
+                                <input type="text" class="form-control" id="inputName" name="first_name"
+                                       placeholder="Name">
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="inputLName" class="col-sm-2 control-label">Last name</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" id="inputLName" name="first_name" placeholder="Name">
+                                <input type="text" class="form-control" id="inputLName" name="first_name"
+                                       placeholder="Name">
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="inputPassword" class="col-sm-2 control-label">New Password</label>
                             <div class="col-sm-10">
-                                <input type="password" class="form-control" id="inputPassword" name="password" placeholder="Password">
+                                <input type="password" class="form-control" id="inputPassword" name="password"
+                                       placeholder="Password">
                             </div>
                         </div>
                         <div class="form-group">
