added more to nutritions and style

--- a/frontend/index-reg.html
+++ b/frontend/index-reg.html
@@ -31,7 +31,7 @@
 <body>
 <!-- Preloader -->
 <div id="preloader">
-    <div id="status"><img src="img/logo.png" alt="" data-retina="true" width="160" height="40"></div>
+    <div id="status"><img src="/static/img/logo.png" alt="" data-retina="true" width="160" height="40"></div>
 </div>
 <!--  end Preloader -->
 
