--- a/frontend/index.html
+++ b/frontend/index.html
@@ -60,12 +60,11 @@
 
             <nav class="menu_container">
                 <ul class="menu">
-                    <li class="drop-normal"><a href="#" class="drop-down">Sport</a></li>
+                    <li class="menu"><a href="./weight">Weight</a></li>
                     <li class="drop-normal"><a href="#" class="drop-down">Food</a>
                         <div class="drop-down-container normal">
                             <ul>
                                 <li><a href="./nutrition/">List</a></li>
-                                <li><a>Add</a></li>
                             </ul>
                         </div><!-- End dropdown normal -->
                     </li>
@@ -80,10 +79,10 @@
 
     <div class="flexslider">
         <ul class="slides">
-            <li style="background: url(/static/img/03.jpg) center"></li>
-            <li style="background: url(/static/img/04.jpg) center"></li>
-            <li style="background: url(/static/img/01.jpg) center"></li>
-            <li style="background: url(/static/img/02.jpg) center"></li>
+            <li style="background: url(/static/img/03.png) center"></li>
+            <li style="background: url(/static/img/04.png) center"></li>
+            <li style="background: url(/static/img/01.png) center"></li>
+            <li style="background: url(/static/img/02.png) center"></li>
         </ul>
     </div><!-- End slider -->
 
