--- a/frontend/index.html
+++ b/frontend/index.html
@@ -60,13 +60,13 @@
 
             <nav class="menu_container">
                 <ul class="menu">
-                    <li class="menu"><a href="./weight">Weight</a></li>
-                    <li class="drop-normal"><a href="#" class="drop-down">Food</a>
-                        <div class="drop-down-container normal">
-                            <ul>
-                                <li><a href="./nutrition/">List</a></li>
-                            </ul>
-                        </div><!-- End dropdown normal -->
+                    <li class="menu"><a href="/weight">Weight</a></li>
+                    <li class="menu"><a href="/nutrition/">Food</a>
+{#                        <div class="drop-down-container normal">#}
+{#                            <ul>#}
+{#                                <li><a href="./nutrition/">List</a></li>#}
+{#                            </ul>#}
+{#                        </div><!-- End dropdown normal -->#}
                     </li>
                     <li class="drop-normal"><a href="#" class="drop-down">Excersices</a></li>
                     <li class="drop-normal"><a href="#" class="drop-down">Profile</a></li>
